--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -2,4 +2,17 @@
     color: black!important;
     font-size: 20px;
 }
-
+.nav-item {
+    text-align: center;
+    font-size: 1.4rem;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.background_image {
+    max-height: calc(100vh - 70px);
+}
+@media only screen and (max-width: 900px){
+    .background_image {
+        height: 60vh;
+    }
+}
